data/derived/sp14/progs/unify/prog4710.ml.out
Characters 106-111:
  in (f,b) (b, true);;
     ^^^^^
Error: This expression has type 'a * 'b
       This is not a function; it cannot be applied.
